<resources>
    <string name="app_name">Health Talk</string>
    <string name="ainda_n_o_tem_cadastro_cadastre_agora">Ainda não tem cadastro? Cadastre agora!</string>
    <string name="n_o_tem_cadastro_cadastre_se_agora">Não tem cadastro? Cadastre-se agora!</string>
    <string name="bntcadastrar_se">Cadastrar-se</string>
    <string name="bntLogin">Login</string>
    <string name="todo">TODO</string>
    <string name="entrar">Entrar</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="rg">RG</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="telefone_residencial">Telefone Residencial</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="cep">CEP</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="n">Nº</string>
    <string name="endere_o">Endereço</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
</resources>
